--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
-  "name": "fm-interactive-rating-component-main",
-  "version": "1.0.0",
-  "description": "This is a solution build to the Frontend Mentor's interactive-rating-component challenge",
-  "main": "index.html",
+  "name": "fm-interactive-rating-component",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx tailwind -i assets/input.css -o assets/output.css --watch"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
-  "keywords": [
-    "rating",
-    "interactive",
-    "rating-component"
-  ],
-  "author": "Divine Chukwunwemmeri Okafor-udah",
-  "license": "ISC"
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.17.0",
+    "@types/react": "^18.3.17",
+    "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.17.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "globals": "^15.13.0",
+    "vite": "^6.0.3"
+  }
 }
