--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dev-tw": "npx tailwindcss -i ./src/input.css -o ./src/App.css --watch"
   },
   "dependencies": {
     "react": "^18.3.1",
